Design Alpha: Fix footer on small pages
On smaller pages the spacer footer would render abover the fixed
footer.

Seeing the 2 footers if weird so now we just hide the spacer footer.

Part of #87

--- a/src/templates/css/green.css
+++ b/src/templates/css/green.css
@@ -252,6 +252,15 @@ nav .nav-links-container .nav-section ul a:hover {
 }
 footer {
   display: none;
+  /**
+    * The "fixed" footer will end up hiding things b/c the page doesn't
+    * know to add extra space for the overlapping content
+    *
+    * So we hack in another footer at the bottom of the page and make it
+    * 0 width & full height. This acts as a hidden spacer at the bottom of
+    * the page which makes sure there's always enough room for the floating
+    * footer below the content.
+    */
   width: 100%;
   font-size: 1.5em;
   margin: 10px 0 0 0;
@@ -273,6 +282,15 @@ footer.fixed-footer {
     z-index: 1;
     display: block;
   }
+}
+footer.spacer-footer {
+  content: attr(data-text);
+  content: attr(data-text) / "";
+  visibility: hidden;
+  overflow: hidden;
+  user-select: none;
+  pointer-events: none;
+  font-weight: bold;
 }
 footer div.links-container {
   border: 2px black solid;
